; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_bicubic_kernel.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_vf_v360.c_bicubic_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32**, i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (float, float, %struct.TYPE_3__*, i32*, i32*, i32*)* @bicubic_kernel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bicubic_kernel(float %0, float %1, %struct.TYPE_3__* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca [4 x float], align 16
  %14 = alloca [4 x float], align 16
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store float %0, float* %7, align 4
  store float %1, float* %8, align 4
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %17 = load float, float* %7, align 4
  %18 = getelementptr inbounds [4 x float], [4 x float]* %13, i64 0, i64 0
  %19 = call i32 @calculate_bicubic_coeffs(float %17, float* %18)
  %20 = load float, float* %8, align 4
  %21 = getelementptr inbounds [4 x float], [4 x float]* %14, i64 0, i64 0
  %22 = call i32 @calculate_bicubic_coeffs(float %20, float* %21)
  store i32 0, i32* %15, align 4
  br label %23

23:                                               ; preds = %89, %6
  %24 = load i32, i32* %15, align 4
  %25 = icmp slt i32 %24, 4
  br i1 %25, label %26, label %92

26:                                               ; preds = %23
  store i32 0, i32* %16, align 4
  br label %27

27:                                               ; preds = %85, %26
  %28 = load i32, i32* %16, align 4
  %29 = icmp slt i32 %28, 4
  br i1 %29, label %30, label %88

30:                                               ; preds = %27
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i32**, i32*** %32, align 8
  %34 = load i32, i32* %15, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32*, i32** %33, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = load i32, i32* %16, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = load i32*, i32** %10, align 8
  %43 = load i32, i32* %15, align 4
  %44 = mul nsw i32 %43, 4
  %45 = load i32, i32* %16, align 4
  %46 = add nsw i32 %44, %45
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i32, i32* %42, i64 %47
  store i32 %41, i32* %48, align 4
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  %51 = load i32**, i32*** %50, align 8
  %52 = load i32, i32* %15, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32*, i32** %51, i64 %53
  %55 = load i32*, i32** %54, align 8
  %56 = load i32, i32* %16, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = load i32*, i32** %11, align 8
  %61 = load i32, i32* %15, align 4
  %62 = mul nsw i32 %61, 4
  %63 = load i32, i32* %16, align 4
  %64 = add nsw i32 %62, %63
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %60, i64 %65
  store i32 %59, i32* %66, align 4
  %67 = load i32, i32* %16, align 4
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds [4 x float], [4 x float]* %13, i64 0, i64 %68
  %70 = load float, float* %69, align 4
  %71 = load i32, i32* %15, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds [4 x float], [4 x float]* %14, i64 0, i64 %72
  %74 = load float, float* %73, align 4
  %75 = fmul float %70, %74
  %76 = fmul float %75, 1.638500e+04
  %77 = call i32 @lrintf(float %76)
  %78 = load i32*, i32** %12, align 8
  %79 = load i32, i32* %15, align 4
  %80 = mul nsw i32 %79, 4
  %81 = load i32, i32* %16, align 4
  %82 = add nsw i32 %80, %81
  %83 = sext i32 %82 to i64
  %84 = getelementptr inbounds i32, i32* %78, i64 %83
  store i32 %77, i32* %84, align 4
  br label %85

85:                                               ; preds = %30
  %86 = load i32, i32* %16, align 4
  %87 = add nsw i32 %86, 1
  store i32 %87, i32* %16, align 4
  br label %27

88:                                               ; preds = %27
  br label %89

89:                                               ; preds = %88
  %90 = load i32, i32* %15, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* %15, align 4
  br label %23

92:                                               ; preds = %23
  ret void
}

declare dso_local i32 @calculate_bicubic_coeffs(float, float*) #1

declare dso_local i32 @lrintf(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
